/**
* Base Form
* Author: Justin Kimbrell (Objective HTML)
* Version: 1.4.1
* Build: 20120928
* Copyright 2012 - All rights reserved
* http://objectivehtml.com/
*/

Version 1.4.1 - 09/28/2012
---------------------------
- (Bug Fix) Fixed an issue that would result in an error if nested arrays were attempted to be encoded.

Version 1.4.0 - 08/01/2012
---------------------------
- (Bug Fix) Fixed an issue preventing the fields from getting parsed if entry was a blank array.
- (Bug Fix) Fixed an inconsistency with the API inserting the correct validation_field in the hidden fields.
- (Bug Fix) Fixed an issue with the set_field_error method not setting the field name correctly. (Removed the string decoding)
- (Feature) Added new total_errors() method.
- (Feature) Added ability to add any HTML attribute with an EE param, including custom data attributes.
- (Feature) Added ability auto "selected" and "check" option values that are delimited with a bar.

Version 1.3.13 - 06/27/2012
---------------------------
- (Bug Fix) Fixed an issue with return variables not getting properly decoded.
- (Bug Fix) When the form was reset, the tagdata assumed a NULL value instead of $this->EE->TMPL->tagdata

Version 1.3.12 - 06/19/2012
---------------------------
- (Bug Fix) Fixed an issue causing the error_handling property to not reset correctly.
- (Bug Fix) Fixed an issue decoding the POST validation fields.

Version 1.3.1 - 06/09/2012
--------------------------
- (Bug Fix) Fixed an issue that prevent errors from displaying if they weren't set to inline. (Always displayed errors inline.)

Version 1.3.0 - 06/09/2012
--------------------------
- (Bug Fix) Fixed an issue with clear() method clearing errors when it shouldn't
- (Feature) Added encoding/decoding to the core class.

Version 1.2.4 - 05/10/2012
--------------------------
- Broke apart the current_url() into a secondary method called base_url().
- Fixed an issue with ajax_response parameter not getting passed as boolean value.
